# fluidmem

./: .gitignore  .gitreview  AUTHORS  COPYING  Makefile.am  README.md  configure.ac  fluidmem-memcached.spec  fluidmem-noop.spec  fluidmem-ramcloud.spec
docs/: installing_RAMCloud.txt
include/: affinity.h  buffer_allocator_array.h  cpufreq.h  dbg.h  pagehash.h  threaded_io.h  upid.h  usage.h  uthash.h  zookeeper_upid.h
lib/externram/: .gitignore  Makefile.am  client.cc  externRAMClient.hh  externRAMClientWrapper.cc  externRAMClientWrapper.h  trace.c
lib/externram/memcached/: externRAMClientImpl.cc  externRAMClientImpl.hh
lib/externram/noop/: externRAMClientImpl.cc  externRAMClientImpl.hh
lib/externram/ramcloud/: externRAMClientImpl.cc  externRAMClientImpl.hh
lib/lrubuffer/: LRUBuffer.hh  LRUBufferImpl.cc  LRUBufferImpl.hh  LRUBufferWrapper.cc  LRUBufferWrapper.h  Makefile.am  c_cache_node.h  lrucache.h
lib/monitorstats/: Makefile.am  Makefile.test  monitorstats.c  monitorstats.h  timingstats.h
lib/pagecache/: Makefile.am  PageCache.hh  PageCacheImpl.cc  PageCacheImpl.hh  PageCacheWrapper.cc  PageCacheWrapper.h
lib/userfault/: Makefile.am  common.h  userfault-client.c  userfault-client.h  userfault.c  userfault.h
monitor/: .gitignore  Makefile.am  monitor.c  pollfd_vector.c  pollfd_vector.h  ui.c  ui_processing.c  ui_processing.h
patches/: perf_perl.patch
patches/RAMCloud/: 0001-Patches-to-fix-ramcloud-build-from-master.patch
patches/kernel/: current
patches/kernel/old/4.10/: 0002-userfaultfd-UFFDIO_REMAP-uABI.patch  0003-userfaultfd-remap_pages-UFFDIO_REMAP-preparation.patch  0005-Since-commit-8809aa2d2-pmdp_huge_clear_flush-has-bee.patch  0006-Add-direction-flag-to-the-remap-struct-for-UFFDIO_RE.patch  0007-Updates-for-compiling-4.9-kernel.patch
patches/kernel/old/4.11/: 0001-userfaultfd-remap_pages-rmap-preparation.patch
patches/kernel/old/4.12/: 0004-userfaultfd-UFFDIO_REMAP.patch
patches/kernel/old/4.13/: 0001-userfaultfd-remap_pages-rmap-preparation.patch  0002-userfaultfd-UFFDIO_REMAP-uABI.patch  0003-userfaultfd-remap_pages-UFFDIO_REMAP-preparation.patch  0004-userfaultfd-UFFDIO_REMAP.patch  0005-Since-commit-8809aa2d2-pmdp_huge_clear_flush-has-bee.patch  0006-Add-direction-flag-to-the-remap-struct-for-UFFDIO_RE.patch  0007-Updates-for-4.11-kernel.patch  0008-Update-userfaultfd-remap-for-4.13.patch
patches/kernel/old/4.3/: 0013-PATCH-Add-direction-flag-to-the-remap-struct-for-UFF.patch
patches/kernel/old/4.9/: 0001-userfaultfd-remap_pages-rmap-preparation.patch  0002-userfaultfd-UFFDIO_REMAP-uABI.patch  0003-userfaultfd-remap_pages-UFFDIO_REMAP-preparation.patch  0004-userfaultfd-UFFDIO_REMAP.patch  0006-Since-commit-8809aa2d2-pmdp_huge_clear_flush-has-bee.patch  0007-Sometimes-handle_userfault-gets-a-fault-that-is-on-i.patch  0008-Add-direction-flag-to-the-remap-struct-for-UFFDIO_RE.patch  0009-adding-modification-to-userfault-fd-self-test.patch  0010-UserfaultFD-Extension-for-non-cooperative-uffd-usage.patch
patches/kernel/old/pre-4.3/: 0001-userfaultfd-remap_pages-rmap-preparation.patch  0002-userfaultfd-remap_pages-swp_entry_swapcount-preparat.patch  0003-userfaultfd-UFFDIO_REMAP-uABI.patch  0004-userfaultfd-remap_pages-UFFDIO_REMAP-preparation.patch  0005-userfaultfd-UFFDIO_REMAP.patch  0006-Since-commit-8809aa2d2-pmdp_huge_clear_flush-has-bee.patch  kernel.avoid-sigbus.patch  uffd_selftest.patch  uffdio_remap_direction_flag.patch
patches/libvirt/: 0001-libvirt-elastic-memory-backend.patch  0002-Expand-libvirt-hotplug-interface-for-elastic-backend.patch
patches/libvirt/old/: elastic-memory-backend.libvirt.1.2.14  libvirt-elastic-memory-backend-v1.2.20-rc1.patch
patches/nova/: 0001-Add-maxMemory-for-NUMA-libvirt-config.patch
patches/qemu/: 0001-elastic-memory-backend.patch
patches/qemu/old/: elastic-memory-backend-qemu-2.4.0.1.patch
scripts/: attachMemory.py  online_mem.sh  rebuild_fluidmem_debug.sh  start_ramcloud.sh  statsExtraction.py
test/: .gitignore  Makefile.am  test.c  test_cases.c  test_cases.sh  test_common.sh  test_externram.c  test_for_corruption.c  test_nofluidmem.c  test_readahead.c  test_readahead.sh
