include_HEADERS = PageCacheWrapper.h

PAGECACHE_FLAGS =
if DEBUG
PAGECACHE_FLAGS += -g -DDEBUG
else
PAGECACHE_FLAGS += -DNDEBUG
if PROFILING
PAGECACHE_FLAGS += -g
endif
endif
if TRACE
PAGECACHE_FLAGS += -DTRACE
endif
if MONITORSTATS
PAGECACHE_FLAGS += -DMONITORSTATS
endif
if PAGECACHE
PAGECACHE_FLAGS += -DPAGECACHE
endif
if PAGECACHE_ZEROPAGE_OPTIMIZATION
PAGECACHE_FLAGS += -DPAGECACHE_ZEROPAGE_OPTIMIZATION
endif
if THREADED_WRITE_TO_EXTERNRAM
PAGECACHE_FLAGS += -DTHREADED_WRITE_TO_EXTERNRAM
endif
if THREADED_PREFETCH
PAGECACHE_FLAGS += -DTHREADED_PREFETCH
endif
if LOCK_DEBUG
PAGECACHE_FLAGS += -DLOCK_DEBUG
endif
if TIMING
PAGECACHE_FLAGS += -DTIMING
endif
if ASYNREAD
PAGECACHE_FLAGS += -DASYNREAD
endif

noinst_LTLIBRARIES = libPageCacheImpl.la

libPageCacheImpl_la_LDFLAGS = -L../monitorstats -Wl,-rpath,../monitorstats
libPageCacheImpl_la_LIBADD = ../monitorstats/libmonitorstats.la

libPageCacheImpl_la_SOURCES = PageCacheImpl.hh PageCacheImpl.cc PageCache.hh upid.h
libPageCacheImpl_la_CPPFLAGS = -std=c++0x $(PAGECACHE_FLAGS) -I$(SCALEOS_ROOT)/include -I$(SCALEOS_ROOT)/lib/monitorstats

lib_LTLIBRARIES = libpagecache.la
libpagecache_la_SOURCES = PageCacheWrapper.h PageCacheWrapper.cc
libpagecache_la_LIBADD = libPageCacheImpl.la

AM_CPPFLAGS =
if DEBUG
AM_CPPFLAGS += -g -DDEBUG
else
AM_CPPFLAGS += -DNDEBUG
if PROFILING
AM_CPPFLAGS += -g
endif
endif
if TRACE
AM_CPPFLAGS += -DTRACE
endif
if MONITORSTATS
AM_CPPFLAGS += -DMONITORSTATS
endif
if PAGECACHE_ZEROPAGE_OPTIMIZATION
AM_CPPFLAGS += -DPAGECACHE_ZEROPAGE_OPTIMIZATION
endif
if THREADED_WRITE_TO_EXTERNRAM
AM_CPPFLAGS += -DTHREADED_WRITE_TO_EXTERNRAM
endif
if THREADED_PREFETCH
AM_CPPFLAGS += -DTHREADED_PREFETCH
endif
if LOCK_DEBUG
AM_CPPFLAGS += -DLOCK_DEBUG
endif
if TIMING
AM_CPPFLAGS += -DTIMING
endif
if ASYNREAD
AM_CPPFLAGS += -DASYNREAD
endif
